postgres-svc-owners.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgres-service-owners
spec:
  selector:
    run: postgres-owners
  ports:
  - port: 5432
