postgres-svc-veterinarians.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgres-service-veterinarians
spec:
  selector:
    run: postgres-veterinarians
  ports:
  - port: 5432
