spring-petclinic-svc-owners.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: spring-petclinic-owners
  name: spring-petclinic-service-owners
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: spring-petclinic-owners
  type: ClusterIP
