spring-petclinic-svc-veterinarians.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: spring-petclinic-veterinarians
  name: spring-petclinic-service-veterinarians
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: spring-petclinic-veterinarians
  type: ClusterIP
